add 5 item blocks

--- a/Rendering/three-js/index.html
+++ b/Rendering/three-js/index.html
@@ -87,7 +87,7 @@
 								<input type="text" class="form-control" name="item2Color" id="item2Color">
 							</div>
 						</div>
-						<!-- item 1 -->
+						<!-- item 3 -->
 						<div class="row">
 							<div class="col-lg-4 container-spotter-input-label-block">
 								<label for="item3XCoordinate">Length</label>
@@ -110,6 +110,56 @@
 							<div class="col-lg-6 container-spotter-input-label-block">
 								<label for="item3Color">Box Color</label>
 								<input type="text" class="form-control" name="item3Color" id="item3Color">
+							</div>
+						</div>
+						<!-- item 4 -->
+						<div class="row">
+							<div class="col-lg-4 container-spotter-input-label-block">
+								<label for="item4XCoordinate">Length</label>
+								<input type="number" class="form-control" name="item4XCoordinate" id="item4XCoordinate">
+							</div>
+							<div class="col-lg-4 container-spotter-input-label-block">
+								<label for="item4YCoordinate">Width</label>
+								<input type="number" class="form-control" name="item4YCoordinate" id="item4YCoordinate">
+							</div>
+							<div class="col-lg-4 container-spotter-input-label-block">
+								<label for="item4ZCoordinate">Height</label>
+								<input type="number" class="form-control" name="item4ZCoordinate" id="item4ZCoordinate">
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-lg-6 container-spotter-input-label-block">
+								<label for="item4Quantity">Quantity</label>
+								<input type="number" class="form-control" name="item4Quantity" id="item4Quantity">
+							</div>
+							<div class="col-lg-6 container-spotter-input-label-block">
+								<label for="item4Color">Box Color</label>
+								<input type="text" class="form-control" name="item4Color" id="item4Color">
+							</div>
+						</div>
+						<!-- item 5 -->
+						<div class="row">
+							<div class="col-lg-4 container-spotter-input-label-block">
+								<label for="item5XCoordinate">Length</label>
+								<input type="number" class="form-control" name="item5XCoordinate" id="item5XCoordinate">
+							</div>
+							<div class="col-lg-4 container-spotter-input-label-block">
+								<label for="item5YCoordinate">Width</label>
+								<input type="number" class="form-control" name="item5YCoordinate" id="item5YCoordinate">
+							</div>
+							<div class="col-lg-4 container-spotter-input-label-block">
+								<label for="item5ZCoordinate">Height</label>
+								<input type="number" class="form-control" name="item5ZCoordinate" id="item5ZCoordinate">
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-lg-6 container-spotter-input-label-block">
+								<label for="item5Quantity">Quantity</label>
+								<input type="number" class="form-control" name="item5Quantity" id="item5Quantity">
+							</div>
+							<div class="col-lg-6 container-spotter-input-label-block">
+								<label for="item5Color">Box Color</label>
+								<input type="text" class="form-control" name="item5Color" id="item5Color">
 							</div>
 						</div>
 						<button class="btn btn-primary" onclick="renderItems()">Pack</button>
