add item headings

--- a/Rendering/three-js/index.html
+++ b/Rendering/three-js/index.html
@@ -38,6 +38,7 @@
 						<button class="btn btn-primary container-spotter-add-item-button" onclick="addItemBlock()" title="Add item">&#43;</button>
 						<hr class="container-spotter-basic-hr">
 						<!-- item 1 -->
+						<h5>Item 1</h5>
 						<div class="row">
 							<div class="col-lg-4 container-spotter-input-label-block">
 								<label for="item1XCoordinate">Length</label>
@@ -63,6 +64,7 @@
 							</div>
 						</div>
 						<!-- item 2 -->
+						<h5>Item 2</h5>
 						<div class="row">
 							<div class="col-lg-4 container-spotter-input-label-block">
 								<label for="item2XCoordinate">Length</label>
@@ -88,6 +90,7 @@
 							</div>
 						</div>
 						<!-- item 3 -->
+						<h5>Item 3</h5>
 						<div class="row">
 							<div class="col-lg-4 container-spotter-input-label-block">
 								<label for="item3XCoordinate">Length</label>
@@ -113,6 +116,7 @@
 							</div>
 						</div>
 						<!-- item 4 -->
+						<h5>Item 4</h5>
 						<div class="row">
 							<div class="col-lg-4 container-spotter-input-label-block">
 								<label for="item4XCoordinate">Length</label>
@@ -138,6 +142,7 @@
 							</div>
 						</div>
 						<!-- item 5 -->
+						<h5>Item 5</h5>
 						<div class="row">
 							<div class="col-lg-4 container-spotter-input-label-block">
 								<label for="item5XCoordinate">Length</label>
