--- a/Rendering/three-js/index.html
+++ b/Rendering/three-js/index.html
@@ -63,6 +63,7 @@
 								<input type="text" class="form-control" name="item1Color" id="item1Color">
 							</div>
 						</div>
+						<hr class="container-spotter-item-divider-hr">
 						<!-- item 2 -->
 						<h5>Item 2</h5>
 						<div class="row">
@@ -89,6 +90,7 @@
 								<input type="text" class="form-control" name="item2Color" id="item2Color">
 							</div>
 						</div>
+						<hr class="container-spotter-item-divider-hr">
 						<!-- item 3 -->
 						<h5>Item 3</h5>
 						<div class="row">
@@ -115,6 +117,7 @@
 								<input type="text" class="form-control" name="item3Color" id="item3Color">
 							</div>
 						</div>
+						<hr class="container-spotter-item-divider-hr">
 						<!-- item 4 -->
 						<h5>Item 4</h5>
 						<div class="row">
@@ -141,6 +144,7 @@
 								<input type="text" class="form-control" name="item4Color" id="item4Color">
 							</div>
 						</div>
+						<hr class="container-spotter-item-divider-hr">
 						<!-- item 5 -->
 						<h5>Item 5</h5>
 						<div class="row">
@@ -167,6 +171,7 @@
 								<input type="text" class="form-control" name="item5Color" id="item5Color">
 							</div>
 						</div>
+						<hr class="container-spotter-item-divider-hr">
 						<button class="btn btn-primary" onclick="renderItems()">Pack</button>
 					</div>
 				</div>
