make left div scrollable

--- a/Rendering/three-js/index.html
+++ b/Rendering/three-js/index.html
@@ -12,7 +12,7 @@
 
 		<!-- <div id="hideController" class="toggle-controller">X</div> -->
 		<div class="row">
-				<div id="controller" class="col-md-3 container-spotter-no-padding-div container">
+				<div id="controller" class="col-md-3 container-spotter-no-padding-div container container-spotter-left-div">
 					<div class="container-spotter-content-div">
 						<h3>Container Spotter</h3>
 						<hr class="container-spotter-basic-hr">
@@ -35,7 +35,8 @@
 							</div>
 						</div>
 						<h4 class="display-inline-block">Item Details</h4>
-						<button class="btn btn-primary container-spotter-add-item-button" onclick="addItemBlock()" title="Add item">&#43;</button>
+						<button class="btn btn-primary container-spotter-add-item-button" 
+							onclick="addItemBlock()" title="Add item">&#43;</button>
 						<hr class="container-spotter-basic-hr">
 						<!-- item 1 -->
 						<h5>Item 1</h5>
@@ -176,7 +177,7 @@
 					</div>
 				</div>
 		
-				<div id="view" class="col-md-9 container-spotter-no-padding-div"></div>
+				<div id="view" class="col-md-9 container-spotter-no-padding-div container-spotter-right-div"></div>
 		</div>
 
 		<script src="js/three.js"></script>
