--- a/Rendering/three-js/index.html
+++ b/Rendering/three-js/index.html
@@ -22,15 +22,15 @@
 							<div class="row">
 								<div class="col-lg-4 container-spotter-input-label-block">
 									<label for="binXCoordinate">Length</label>
-									<input type="number" class="form-control" name="binXCoordinate" id="binXCoordinate">
+									<input type="number" class="form-control" name="binXCoordinate" id="binXCoordinate" placeholder=20>
 								</div>
 								<div class="col-lg-4 container-spotter-input-label-block">
 									<label for="binYCoordinate">Width</label>
-									<input type="number" class="form-control" name="binYCoordinate" id="binYCoordinate">
+									<input type="number" class="form-control" name="binYCoordinate" id="binYCoordinate" placeholder=10>
 								</div>
 								<div class="col-lg-4 container-spotter-input-label-block">
 									<label for="binZCoordinate">Height</label>
-									<input type="number" class="form-control" name="binZCoordinate" id="binZCoordinate">
+									<input type="number" class="form-control" name="binZCoordinate" id="binZCoordinate" placeholder=10>
 								</div>
 							</div>
 						</div>
@@ -43,25 +43,25 @@
 						<div class="row">
 							<div class="col-lg-4 container-spotter-input-label-block">
 								<label for="item1XCoordinate">Length</label>
-								<input type="number" class="form-control" name="item1XCoordinate" id="item1XCoordinate">
+								<input type="number" class="form-control" name="item1XCoordinate" id="item1XCoordinate" placeholder=2>
 							</div>
 							<div class="col-lg-4 container-spotter-input-label-block">
 								<label for="item1YCoordinate">Width</label>
-								<input type="number" class="form-control" name="item1YCoordinate" id="item1YCoordinate">
+								<input type="number" class="form-control" name="item1YCoordinate" id="item1YCoordinate" placeholder=1>
 							</div>
 							<div class="col-lg-4 container-spotter-input-label-block">
 								<label for="item1ZCoordinate">Height</label>
-								<input type="number" class="form-control" name="item1ZCoordinate" id="item1ZCoordinate">
+								<input type="number" class="form-control" name="item1ZCoordinate" id="item1ZCoordinate" placeholder=3>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-lg-6 container-spotter-input-label-block">
 								<label for="item1Quantity">Quantity</label>
-								<input type="number" class="form-control" name="item1Quantity" id="item1Quantity">
+								<input type="number" class="form-control" name="item1Quantity" id="item1Quantity" placeholder=2>
 							</div>
 							<div class="col-lg-6 container-spotter-input-label-block">
 								<label for="item1Color">Box Color</label>
-								<input type="text" class="form-control" name="item1Color" id="item1Color">
+								<input type="text" class="form-control" name="item1Color" id="item1Color" placeholder="0x000fff">
 							</div>
 						</div>
 						<hr class="container-spotter-item-divider-hr">
@@ -70,25 +70,25 @@
 						<div class="row">
 							<div class="col-lg-4 container-spotter-input-label-block">
 								<label for="item2XCoordinate">Length</label>
-								<input type="number" class="form-control" name="item2XCoordinate" id="item2XCoordinate">
+								<input type="number" class="form-control" name="item2XCoordinate" id="item2XCoordinate" placeholder=3>
 							</div>
 							<div class="col-lg-4 container-spotter-input-label-block">
 								<label for="item2YCoordinate">Width</label>
-								<input type="number" class="form-control" name="item2YCoordinate" id="item2YCoordinate">
+								<input type="number" class="form-control" name="item2YCoordinate" id="item2YCoordinate" placeholder=2>
 							</div>
 							<div class="col-lg-4 container-spotter-input-label-block">
 								<label for="item2ZCoordinate">Height</label>
-								<input type="number" class="form-control" name="item2ZCoordinate" id="item2ZCoordinate">
+								<input type="number" class="form-control" name="item2ZCoordinate" id="item2ZCoordinate" placeholder=3>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-lg-6 container-spotter-input-label-block">
 								<label for="item2Quantity">Quantity</label>
-								<input type="number" class="form-control" name="item2Quantity" id="item2Quantity">
+								<input type="number" class="form-control" name="item2Quantity" id="item2Quantity" placeholder=1>
 							</div>
 							<div class="col-lg-6 container-spotter-input-label-block">
 								<label for="item2Color">Box Color</label>
-								<input type="text" class="form-control" name="item2Color" id="item2Color">
+								<input type="text" class="form-control" name="item2Color" id="item2Color" placeholder="0xfff000">
 							</div>
 						</div>
 						<hr class="container-spotter-item-divider-hr">
@@ -97,25 +97,25 @@
 						<div class="row">
 							<div class="col-lg-4 container-spotter-input-label-block">
 								<label for="item3XCoordinate">Length</label>
-								<input type="number" class="form-control" name="item3XCoordinate" id="item3XCoordinate">
+								<input type="number" class="form-control" name="item3XCoordinate" id="item3XCoordinate" placeholder=4>
 							</div>
 							<div class="col-lg-4 container-spotter-input-label-block">
 								<label for="item3YCoordinate">Width</label>
-								<input type="number" class="form-control" name="item3YCoordinate" id="item3YCoordinate">
+								<input type="number" class="form-control" name="item3YCoordinate" id="item3YCoordinate" placeholder=2>
 							</div>
 							<div class="col-lg-4 container-spotter-input-label-block">
 								<label for="item3ZCoordinate">Height</label>
-								<input type="number" class="form-control" name="item3ZCoordinate" id="item3ZCoordinate">
+								<input type="number" class="form-control" name="item3ZCoordinate" id="item3ZCoordinate" placeholder=2>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-lg-6 container-spotter-input-label-block">
 								<label for="item3Quantity">Quantity</label>
-								<input type="number" class="form-control" name="item3Quantity" id="item3Quantity">
+								<input type="number" class="form-control" name="item3Quantity" id="item3Quantity" placeholder=3>
 							</div>
 							<div class="col-lg-6 container-spotter-input-label-block">
 								<label for="item3Color">Box Color</label>
-								<input type="text" class="form-control" name="item3Color" id="item3Color">
+								<input type="text" class="form-control" name="item3Color" id="item3Color" placeholder="0xff00ff">
 							</div>
 						</div>
 						<hr class="container-spotter-item-divider-hr">
@@ -124,52 +124,25 @@
 						<div class="row">
 							<div class="col-lg-4 container-spotter-input-label-block">
 								<label for="item4XCoordinate">Length</label>
-								<input type="number" class="form-control" name="item4XCoordinate" id="item4XCoordinate">
+								<input type="number" class="form-control" name="item4XCoordinate" id="item4XCoordinate" placeholder=4>
 							</div>
 							<div class="col-lg-4 container-spotter-input-label-block">
 								<label for="item4YCoordinate">Width</label>
-								<input type="number" class="form-control" name="item4YCoordinate" id="item4YCoordinate">
+								<input type="number" class="form-control" name="item4YCoordinate" id="item4YCoordinate" placeholder=5>
 							</div>
 							<div class="col-lg-4 container-spotter-input-label-block">
 								<label for="item4ZCoordinate">Height</label>
-								<input type="number" class="form-control" name="item4ZCoordinate" id="item4ZCoordinate">
+								<input type="number" class="form-control" name="item4ZCoordinate" id="item4ZCoordinate" placeholder=3>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-lg-6 container-spotter-input-label-block">
 								<label for="item4Quantity">Quantity</label>
-								<input type="number" class="form-control" name="item4Quantity" id="item4Quantity">
+								<input type="number" class="form-control" name="item4Quantity" id="item4Quantity" placeholder=1>
 							</div>
 							<div class="col-lg-6 container-spotter-input-label-block">
 								<label for="item4Color">Box Color</label>
-								<input type="text" class="form-control" name="item4Color" id="item4Color">
-							</div>
-						</div>
-						<hr class="container-spotter-item-divider-hr">
-						<!-- item 5 -->
-						<h5>Item 5</h5>
-						<div class="row">
-							<div class="col-lg-4 container-spotter-input-label-block">
-								<label for="item5XCoordinate">Length</label>
-								<input type="number" class="form-control" name="item5XCoordinate" id="item5XCoordinate">
-							</div>
-							<div class="col-lg-4 container-spotter-input-label-block">
-								<label for="item5YCoordinate">Width</label>
-								<input type="number" class="form-control" name="item5YCoordinate" id="item5YCoordinate">
-							</div>
-							<div class="col-lg-4 container-spotter-input-label-block">
-								<label for="item5ZCoordinate">Height</label>
-								<input type="number" class="form-control" name="item5ZCoordinate" id="item5ZCoordinate">
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-lg-6 container-spotter-input-label-block">
-								<label for="item5Quantity">Quantity</label>
-								<input type="number" class="form-control" name="item5Quantity" id="item5Quantity">
-							</div>
-							<div class="col-lg-6 container-spotter-input-label-block">
-								<label for="item5Color">Box Color</label>
-								<input type="text" class="form-control" name="item5Color" id="item5Color">
+								<input type="text" class="form-control" name="item4Color" id="item4Color" placeholder="0xffff00">
 							</div>
 						</div>
 						<hr class="container-spotter-item-divider-hr">
