--- a/Rendering/three-js/index.html
+++ b/Rendering/three-js/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Container Spotter Example</title>
+		<title>Container Spotter Interactive Example</title>
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/style.css">
 		<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous"> -->
