add disclaimer for the application

--- a/Rendering/three-js/index.html
+++ b/Rendering/three-js/index.html
@@ -304,6 +304,7 @@
 
 			function addItemBlock() {
 				// TODO: implement this function
+				alert('This function will be implemented in the final application');
 				console.log('This function will be implemented in the final application');
 			}
 
@@ -406,6 +407,8 @@
 				}
 
 			}
+
+			alert('This is just a demo product. Final product is still WIP. Some functionalities are not present in the demo. Also, this application might show some unexpected behaviour.');
 		</script>
 	</body>
 </html>
