fix typo in index.html

--- a/Rendering/three-js/index.html
+++ b/Rendering/three-js/index.html
@@ -330,7 +330,7 @@
 				};
 
 				// if items are atleast packed once
-				// then remove packed items form binObject
+				// then remove packed items from binObject
 				if (cubes.length > 0) {
 					for (const cube of cubes) {
 						var counter = 0;
